<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
      android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bblue"
    android:orientation="vertical"  >
    
        <EditText
        android:id="@+id/firstPlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/enterPlayerOneName"
       />
      <EditText
        android:id="@+id/secondPlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:layout_below="@+id/firstPlayer"
        android:hint="@string/enterPlayerTwoName"/>
    <ImageButton
        android:id="@+id/enterNames"
        android:src="@drawable/enter"
        android:layout_width="wrap_content"
        android:layout_toRightOf="@+id/firstPlayer"
        android:layout_centerVertical="true"
        android:layout_height="wrap_content"
        android:contentDescription="@string/name_dialog" />




</RelativeLayout>